# events_face

./: manage.py  pyproject.toml
src/: db.sqlite3  urls.py
src/core/: asgi.py  settings.py  wsgi.py
src/events/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
src/events/migrations/: 0001_initial.py  0002_alter_event_name.py
src/sync/: admin.py  apps.py  models.py
src/sync/migrations/: 0001_initial.py
src/users_auth/: apps.py  serializers.py  urls.py  views.py
